created skeleton landing, created auth

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+#login{
+  max-width: 200px;
+  border: 1px black solid;
+}
+
+label{
+  display: block;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.hide{
+  display: none;
+}
+
+.fail{
+  display: block;
+  background: red;
+  color: white;
 }
