--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0 10%;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -97,6 +97,7 @@ code {
 }
 .content{
   margin-top: 5em;
+  margin-bottom: 5em;
 }
 .hide{
   display: none;
