--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,6 +56,7 @@ code {
 }
 
 .footer{
+  background: lightgray;
   bottom: 0px;
   justify-content: space-around;
   align-items: center;
@@ -113,4 +114,34 @@ code {
 .reg-event-item img{
   margin-right: 1em;
   border-radius: 5%;
+}
+
+.event{
+
+}
+
+.event-detail{
+
+}
+
+.event-map{
+  height: calc(100vh - 10em);
+  background: url("https://northstar-pres.com/wp-content/uploads/2015/10/google-map-placeholder.png");
+  background-size: cover;
+  margin-bottom: 1em;
+}
+
+.rsvp{
+  display: flex;
+  align-content: space-around;
+  justify-content: space-around;
+}
+.rsvp select{
+  min-width: 30%;
+}
+
+.rsvp-img{
+  display: flex;
+  justify-content: space-between;
+  width: 20%;
 }
