--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,7 +30,32 @@ label{
   display: block;
 }
 
+.landing-page{
+  display: flex;
+  flex-flow: column;
+  padding-top: 23vh;
+  color: white;
+  text-align: center;
+  align-items: center;
+}
 
+.landing-page .button{
+  border-radius: 12px;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 66vw;
+  height: 3em;
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  background: #FFA500;
+  margin: 20px 0;
+}
+.landing-page h3{
+  margin: 0;
+}
 .signUpContainer  {
   width: 100%;
   height:100vh;
@@ -67,9 +92,7 @@ label{
   background: red;
   color: white;
 }
-.profile{
-  /* width: 33%; */
-}
+
 .app{
   height: 100vh;
 }
@@ -185,19 +208,19 @@ label{
   margin-left: 5%;
 }
 
-.whiteBackground{
-  background: white
-}
-
 .background{
-  background-image: url('https://i.imgur.com/FWi52No.jpg');
+  background-image: url('./assets/landingbackground.svg');
   background-size: cover; 
-  background-position: fixed;
-  background-repeat: no-repeat;
 }
 
 .logoContainer{
-  padding-top: 10px
+  text-align: center;
+  padding-top: 10px;
+  height: 100%;
+}
+
+.logoContainer svg{
+  min-height: 200px;
 }
 
 .logo{
