--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,7 @@ label{
 .landing-page{
   display: flex;
   flex-flow: column;
-  padding-top: 23vh;
+  padding-top: 13vh;
   color: white;
   text-align: center;
   align-items: center;
@@ -53,9 +53,13 @@ label{
   background: #FFA500;
   margin: 20px 0;
 }
+
+
 .landing-page h3{
+  pointer-events: none;
   margin: 0;
 }
+
 .signUpContainer  {
   width: 100%;
   height:100vh;
@@ -95,6 +99,7 @@ label{
 
 .app{
   height: 100vh;
+  padding: 0 15%;
 }
 
 .header, .footer{
@@ -139,8 +144,29 @@ label{
   margin: 0 auto;
 } */
 
+.intro h4, .intro p{
+  margin: 10px 0;
+}
+
 .loginForm{
-  margin-top: 3em;
+  margin-top: 1em;
+  display: flex;
+  flex-flow: column;
+}
+.loginForm input{
+  font-family: roboto;
+  font-size: 1em;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #FFA500;
+  color: white;
+  margin: 1em;
+  background: none;
+}
+
+.loginForm input:focus{
+  font-size: 1.2em;
 }
 
 .loginContent{
@@ -189,9 +215,6 @@ label{
   border-radius: 5%;
 }
 
-.signUpMargin{
-  padding-top: 3em;
-}
 
 .signUpButton{
   border: 2px solid black;
@@ -267,7 +290,8 @@ label{
   font-size: 3em;
 }
 .content{
-  margin: 5em 5%;
+  /* margin: 5em 5%; */
+  overflow: scroll;
 }
 .hide{
   display: none;
